# sistema_frota

./: README.md  pyproject.toml  setup.py
app/: container.py  main.py  settings.py
app/api/v1/: dependencies.py
app/api/v1/schemas/: motorista_schema.py
app/application/services/: calculo_consumo_service.py  validacao_viagem_service.py
app/domain/aggregates/: viagem_aggregate.py
app/domain/entities/: manutencao.py  motorista.py  veiculo.py  viagem.py
app/domain/events/: __init__.py  domain_event.py  viagem_iniciada.py
app/domain/events/motorista/: motorista_criado.py
app/domain/events/veiculo/: manutencao_necessaria.py
app/domain/events/viagem/: viagem_encerrada.py
app/domain/value_objects/motorista/: tipo_cnh.py
app/domain/value_objects/veiculo/: tipo_veiculo.py
app/infrastructure/auth/: jwt_service.py
app/infrastructure/persistence/sqlalchemy/: database.py  models.py
app/infrastructure/persistence/sqlalchemy/repositories/: motorista_repository_impl.py
examples/: main.py
sistema_frota/: __init__.py  main.py
sistema_frota/core/: __init__.py  motoristas.py  veiculos.py  viagens.py
sistema_frota/core/entities/: __init__.py  motoristas.py  veiculos.py  viagens.py
sistema_frota/core/usecases/: __init__.py  gerenciar_motoristas.py  gerenciar_veiculos.py  gerenciar_viagens.py
sistema_frota/db/: database.py
sistema_frota/infrastructure/: __init__.py
sistema_frota/infrastructure/db/: __init__.py  database.py  schema.py
sistema_frota/infrastructure/repositories/: __init__.py  motorista_repo.py  veiculo_repo.py  viagem_repo.py
sistema_frota/interface/: __init__.py  menu.py
sistema_frota/utils/: __init__.py  menus.py  validators.py
tests/: __init__.py  test_motoristas.py  test_veiculos.py  test_viagens.py
